--- a/src/components/Background/style.css
+++ b/src/components/Background/style.css
@@ -1,14 +1,133 @@
 .bg {
 	background: rgb(0,101,114);
 	background: linear-gradient(0deg, rgba(0,101,114,1) 0%, rgba(21,230,182,1) 100%);
-	display: flex;
+	color: #ffffff;
 	height: 100vh;
-	justify-content: center;
 	margin: 0;
 	padding: 0;
 	width: 100vw;
 }
 
+.btn {
+	background-color: #15E6B6;
+	border: none;
+	border-radius: 30px;
+	color: #ffffff;
+	font-size: 1.2rem;
+	font-weight: 700;
+	height: 62px;
+	text-transform: uppercase;
+	width: 192px;
+
+}
+
+.btn_container {
+	margin-top: 3rem;
+	text-align: center;
+}
+
+.emailInput {
+	border-radius: 37px;
+	color: #15e6b6;
+	font-size: 1.6rem;
+	height: 75px;
+	margin: 0 auto;
+	padding-left: 2rem;
+	width: 630px;
+}
+
+.emailInput::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+	color: #15e6b6;
+	font-size: 1.6rem;
+}
+.emailInput::-moz-placeholder { /* Firefox 19+ */
+	color: #15e6b6;
+	font-size: 1.6rem;
+	opacity: 1;
+}
+.emailInput:-ms-input-placeholder { /* IE 10+ */
+	color: #15e6b6;
+	font-size: 1.6rem;
+}
+.emailInput:-moz-placeholder { /* Firefox 18- */
+	color: #15e6b6;
+	font-size: 1.6rem;
+	opacity: 1;
+}
+
+.emailInput_container {
+	margin-top: 2rem;
+	text-align: center;
+}
+
+.h1, .h2, .logo {
+	text-align: center;
+}
+
+.h1 {
+	font-size: 2.5rem;
+	font-weight: 700;
+	margin-top: 10vh;
+	margin-bottom: 0;
+}
+
+.h2 {
+	font-size: 2rem;
+	font-weight: 400;
+	margin-top: 1rem;
+}
+
 .logo {
-	margin-top: 100px;
+	margin: 0 auto;
+	padding-top: 100px;
+	width: 100vw;
+}
+
+.socialIcon {
+	width: 75px;
+}
+
+.socialIcon_container {
+	display: flex;
+	justify-content: center;
+	margin-top: 200px;
+}
+
+@media only screen and (max-width: 600px) {
+	html, body {
+		font-size: 12px; 
+	}
+
+	.btn {
+		height: 40px;
+		width: 50vw;
+	}
+
+	.emailInput {
+		font-size: 1.5rem;
+		height: 54px;
+		width: 90vw;
+	}
+
+	.h1 {
+		font-size: 2rem;
+	}
+
+	.h2 {
+		font-size: 1.5rem;
+	}
+
+	.logo {
+		padding-top: 40px;
+	}
+
+	.socialIcon {
+		display: inline-block;
+		margin: 0 1rem;
+		width: 60px;
+	}
+	
+	.socialIcon_container {
+		margin-top: 12rem;
+	}
 }
