--- a/src/components/Background/style.css
+++ b/src/components/Background/style.css
@@ -13,7 +13,7 @@
 	border: none;
 	border-radius: 30px;
 	color: #ffffff;
-	font-size: 1.2rem;
+	font-size: 20px;
 	font-weight: 700;
 	height: 62px;
 	text-transform: uppercase;
@@ -29,7 +29,7 @@
 .emailInput {
 	border-radius: 37px;
 	color: #15e6b6;
-	font-size: 1.6rem;
+	font-size: 35px;
 	height: 75px;
 	margin: 0 auto;
 	padding-left: 2rem;
@@ -65,14 +65,14 @@
 }
 
 .h1 {
-	font-size: 2.5rem;
+	font-size: 40px;
 	font-weight: 700;
 	margin-top: 10vh;
 	margin-bottom: 0;
 }
 
 .h2 {
-	font-size: 2rem;
+	font-size: 35px;
 	font-weight: 400;
 	margin-top: 1rem;
 }
@@ -92,7 +92,7 @@
 }
 
 .socialIcon:hover, .socialIcon_hover {
-	
+
 }
 
 .socialIcon_container {
