--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,9 +1,15 @@
+@font-face {
+  font-family: "San Francisco";
+  font-weight: 400;
+  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.woff");
+}
+
 html, body {
 	height: 100%;
 	width: 100%;
 	padding: 0;
 	margin: 0;
-	font-family: 'Helvetica Neue', arial, sans-serif;
+	font-family: "San Francisco", "Helvetica Neue", Arial, sans-serif;
 	font-size: 16px;
 	font-weight: 400;
 	-webkit-font-smoothing: antialiased;
