--- a/src/components/Background/style.css
+++ b/src/components/Background/style.css
@@ -121,6 +121,7 @@
 	.btn {
 		font-size: 11px;
 		height: 30px;
+		min-width: 96px;
 		width: 96px;
 	}
 
@@ -178,6 +179,7 @@
 		border-radius: 15px;
 		font-size: 11px;
 		height: 30px;
+		min-width: 96px;
 		width: 96px;
 	}
 
